Moved the collapse icon to the left & fixed some other css stuff

--- a/public/scss/_misc.scss
+++ b/public/scss/_misc.scss
@@ -477,8 +477,8 @@ article.invite {
 		.collapser {
 			position: absolute;
 			height: 24px;
-			top: 10px;
-			right: 10px;
+			top: 19px;
+			left: 10px;
 			font-size: 0.85em;
 			color: #777;
 			cursor: pointer;
@@ -490,7 +490,7 @@ article.invite {
 			padding: 0;
 			.collapser {
 				top: -3px;
-				right: 5px;
+				left: 5px;
 			}
 			header, section, footer {
 				display: none;
@@ -503,6 +503,7 @@ article.invite {
 		.collapsed-content {
 			display: none;
 			line-height: 16px;
+			padding-left: 20px;
 			small {
 				font-size: 85%;
 				color: #ccc;
@@ -541,6 +542,9 @@ article.invite {
 			&:first-of-type {
 				margin-top: 10px;
 			}
+			&:last-of-type {
+				padding-bottom: 0;
+			}
 			.parent {
 				border-right: none;
 				border-bottom: none;
@@ -555,12 +559,12 @@ article.invite {
 			height: 40px;
 			display: block;
 			position: relative;
-			padding-left: 25px;
+			padding-left: 45px;
 			margin-bottom: 5px;
 			.voters	{
 				position: absolute;
 				top: -5px;
-				left: 0;
+				left: 20px;
 				height: 100%;
 				width: 25px;
 				color: #ccc;
@@ -624,11 +628,13 @@ article.invite {
 		section {
 			margin: 0;
 			padding: 0;
+			padding-left: 20px;
 			margin-bottom: 20px;
 		}
 
 		footer {
 			width: 100%;
+			padding-left: 20px;
 			margin-top: -20px;
 
 			a {
